# metal_triangle_cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  shaders.metal
